# The-game-of-the-Snake

./: .gitignore  CMakeLists.txt  README.md  domande.txt  functiontest.cpp  giocofunzioni.cpp  struct.hpp  tabellonetest.cpp
include/: board.hpp  game.hpp
src/: board.cpp  game.cpp  main.cpp
